@@ -6,7 +6,6 @@ import java.util.Deque;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.apache.log4j.Level;
@@ -15,6 +14,7 @@ import org.eclipse.core.resources.IFile;
 import org.eclipse.core.resources.IFolder;
 import org.eclipse.core.resources.IProject;
 import org.eclipse.core.resources.IResource;
+import org.eclipse.core.resources.IResourceStatus;
 import org.eclipse.core.resources.ResourcesPlugin;
 import org.eclipse.core.runtime.CoreException;
 import org.eclipse.core.runtime.IPath;
@@ -146,10 +146,18 @@ public final class EclipseProjectUtil {
 	 */
 	public static IFolder getGravityFolder(final IProject project, final IProgressMonitor monitor) throws IOException {
 		final var gravityFolder = project.getFolder(GravityActivator.GRAVITY_FOLDER_NAME);
+		try {
+			project.refreshLocal(IResource.DEPTH_INFINITE, monitor);
+		} catch (final CoreException e) {
+			LOGGER.error(e);
+		}
 		if (!gravityFolder.exists()) {
 			try {
 				gravityFolder.create(true, true, monitor);
 			} catch (final CoreException e) {
+				if (e.getStatus().getCode() == IResourceStatus.RESOURCE_EXISTS) {
+					return gravityFolder;
+				}
 				throw new IOException(e);
 			}
 		}
@@ -309,7 +317,7 @@ public final class EclipseProjectUtil {
 	public static List<IProject> importProjects(final File rootFolder, final IProgressMonitor monitor)
 			throws CoreException {
 		final var root = ResourcesPlugin.getWorkspace().getRoot();
-		final List<IProject> projects = Stream.of(rootFolder.listFiles()).filter(File::isDirectory).parallel()
+		final var projects = Stream.of(rootFolder.listFiles()).filter(File::isDirectory).parallel()
 				.map(projectFolder -> {
 					try {
 						return importProject(projectFolder, monitor);
@@ -317,7 +325,7 @@ public final class EclipseProjectUtil {
 						LOGGER.error(e);
 						return null;
 					}
-				}).filter(Objects::nonNull).collect(Collectors.toList());
+				}).filter(Objects::nonNull).toList();
 		root.refreshLocal(IResource.DEPTH_INFINITE, monitor);
 		return projects;
 	}
